--- a/index.html
+++ b/index.html
@@ -421,21 +421,41 @@
                     spreadsheetId: SPREADSHEET_ID, range: SHEET_NAME,
                 });
                 const values = response.result.values;
-                if (!values || values.length <= 1 || JSON.stringify(values[0]) !== JSON.stringify(HEADERS)) {
+
+                if (!values || values.length < 1 || JSON.stringify(values[0]) !== JSON.stringify(HEADERS)) {
                     await initializeSheet(values && values.length > 0);
                     allAssets = [];
                 } else {
-                    allAssets = values.slice(1).map((row, index) => ({
+                    const headers = values[0];
+                    const dataRows = values.slice(1);
+                    const headerMap = {};
+                    headers.forEach((header, index) => {
+                        headerMap[header] = index;
+                    });
+
+                    allAssets = dataRows.map((row, index) => ({
                         rowIndex: index + 2,
-                        id: row[0], name: row[1], quantity: row[2], site: row[3], location: row[4],
-                        container: row[5], intendedUserType: row[6], condition: row[7], type: row[8],
-                        idCode: row[9], serial: row[10], assignedTo: row[11], dateIssued: row[12],
-                        purchaseDate: row[13], specs: row[14], 
-                        loginInfo: row[15] ? atob(row[15]) : '', notes: row[16]
+                        id: row[headerMap["Asset ID"]],
+                        name: row[headerMap["Asset Name"]],
+                        quantity: row[headerMap["Quantity"]],
+                        site: row[headerMap["Site"]],
+                        location: row[headerMap["Location"]],
+                        container: row[headerMap["Container"]],
+                        intendedUserType: row[headerMap["Intended User Type"]],
+                        condition: row[headerMap["Condition"]],
+                        type: row[headerMap["Asset Type"]],
+                        idCode: row[headerMap["ID Code"]],
+                        serial: row[headerMap["Serial Number"]],
+                        assignedTo: row[headerMap["Assigned To"]],
+                        dateIssued: row[headerMap["Date Issued"]],
+                        purchaseDate: row[headerMap["Purchase Date"]],
+                        specs: row[headerMap["Specs"]],
+                        loginInfo: row[headerMap["Login Info"]] ? atob(row[headerMap["Login Info"]]) : '',
+                        notes: row[headerMap["Notes"]]
                     }));
                 }
                 renderTable();
-                populateDatalists(); // <-- New function call
+                populateDatalists();
             } catch (err) {
                 console.error(err);
                 showMessage(`Error loading data: ${err.result?.error?.message || 'Unknown error'}`);
